made options optional, added ability to clear styles and add custom styles and switch styles and text on the fly

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,13 @@
 .App {
   font-family: sans-serif;
   text-align: center;
-  background-color: black;
+}
+
+.TestClass {
+  background-color: purple;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
 }
