--- a/src/components/Letters/letterSpanStyles.css
+++ b/src/components/Letters/letterSpanStyles.css
@@ -1,10 +1,10 @@
 /* Animate a rectagular shadow typing effect. */
 
-.react-natural-typing-typewriter {
+.react-natural-typing-effect-typewriter {
   background-color: white;
   color: white;
   animation-name: react-natural-typing-effect-typewriter-animation;
-  animation-duration: 200ms;
+  animation-duration: 150ms;
   animation-fill-mode: forwards;
 }
 
@@ -19,11 +19,11 @@
   }
 }
 
-.react-natural-typing-negativeTypewriter {
+.react-natural-typing-effect-negativeTypewriter {
   background-color: black;
   color: black;
   animation-name: react-natural-typing-effect-negativeTypewriter-animation;
-  animation-duration: 200ms;
+  animation-duration: 150ms;
   animation-fill-mode: forwards;
 }
 
@@ -38,7 +38,7 @@
   }
 }
 
-.react-natural-typing-blackGreenTerminal {
+.react-natural-typing-effect-blackGreenTerminal {
   background-color: black;
   color: greenyellow;
 }
@@ -46,3 +46,21 @@
 .react-natural-typing-effect-blackGreenTerminal-cursor {
   background-color: greenyellow;
 }
+
+.react-natural-typing-effect-blackGreenTerminal-blinking-cursor {
+  background-color: greenyellow;
+  animation-iteration-count: infinite;
+  animation-name: react-natural-typing-effect-blackGreenTerminal-blinking-cursor-animation;
+  animation-duration: 250ms;
+  animation-fill-mode: forwards;
+}
+
+@keyframes react-natural-typing-effect-blackGreenTerminal-blinking-cursor-animation {
+  from {
+    background-color: black;
+  }
+  to {
+    background-color: greenyellow;
+  }
+}
+
